--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="style.css" rel="stylesheet"></link>
 </head>
 <body>
+    <h1>Player 1</h1>
+    <h1>Player 2</h1>
 </body>
 <script src="./scripts/main.js" type="module"></script>
 </html>
