Moved the event listener initialization for the DOM board pieces to a separate file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="style.css" rel="stylesheet"></link>
 </head>
 <body>
-    <h1>Player 1</h1>
-    <h1>Player 2</h1>
+    <div class="game-area"></div>
+    <div class="winner-display"><h2>Winner: <span></span></h2></div>
 </body>
 <script src="./scripts/main.js" type="module"></script>
 </html>
