Adding some functionality to reset the game, still some logic issues to work out in the main loop to set up a computer vs user adversary

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="game-area"></div>
-    <div class="winner-display"><h2>Winner: <span></span></h2></div>
+    <div class="winner-display">
+        <h1>Winner: <span></span></h1>
+    </div>
 </body>
 <script src="./scripts/main.js" type="module"></script>
 </html>
